--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ env:
 - BUILD_TYPE=cmake CURVE=tweetnacl
 - BUILD_TYPE=default CURVE=libsodium
 - BUILD_TYPE=default
+- BUILD_TYPE=coverage CURVE=tweetnacl
+
+matrix:
+  exclude:
+    -  env: BUILD_TYPE=coverage CURVE=tweetnacl
+       os: osx
 
 sudo: false
 
@@ -21,6 +27,7 @@ addons:
     - kubuntu-backports
     packages:
     - cmake
+    - lcov
 
 before_install:
 - if [ $TRAVIS_OS_NAME == "osx" ] ; then brew update; brew install binutils ; fi
