Problem: false positive on valgrind 3.10
Solution: update builds/valgrind/valgrind.supp to ignore glibc's
__libc_freeres calls. This code runs after the program exits, and
tries to de-allocate memory allocated internally by glibc, so it has
nothing to do with libzmq code. This suppression is added by default
in newer versions of Valgrind, not yet available on older
distributions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -779,3 +779,5 @@ maintainer-clean-local:
 	-rm -rf $(top_srcdir)/config
 
 @VALGRIND_CHECK_RULES@
+
+VALGRIND_SUPPRESSIONS_FILES = builds/valgrind/valgrind.supp
