Problem: mkdtemp not available on all platforms
Solution: check for availability in autoconf and cmake, and if not
available fall back to random file name rather than random directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,6 +186,10 @@ set (CMAKE_REQUIRED_INCLUDES sys/time.h)
 check_function_exists (gethrtime HAVE_GETHRTIME)
 set (CMAKE_REQUIRED_INCLUDES)
 
+set (CMAKE_REQUIRED_INCLUDES stdlib.h)
+check_function_exists (mkdtemp HAVE_MKDTEMP)
+set (CMAKE_REQUIRED_INCLUDES)
+
 add_definitions (-D_REENTRANT -D_THREAD_SAFE)
 add_definitions (-DZMQ_CUSTOM_PLATFORM_HPP)
 
