Problem: IPv6 is disabled on Travis Precise/Trusty
Solution: add one test run in a docket container environment, which
is currently the only environment where it's possibile to bind a
socket to ::1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,11 @@ matrix:
        os: osx
     -  env: BUILD_TYPE=valgrind CURVE=tweetnacl
        os: osx
+  include:
+    -  env: BUILD_TYPE=default CURVE=tweetnacl IPv6=ON
+       os: linux
+       dist: precise
+       sudo: false
 
 sudo: required
 
